将各微服务API端点路径标准化为RESTful风格